frame/support/test/tests/construct_runtime_ui/generics_in_invalid_module.stderr
error: `Call` is not allowed to have generics. Only the following pallets are allowed to have generics: `Event`, `Error`, `Origin`, `Config`.
 --> tests/construct_runtime_ui/generics_in_invalid_module.rs:7:36
  |
7 |         Balance: balances::<Instance1>::{Call<T>, Origin<T>},
  |                                          ^^^^
